# cleantype

./: .clang-format  .cleantype.json  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  Manual.html  README.md  Readme.html  TODO.md  appveyor.yml  conanfile.txt  demo.cpp
binder/: Readme.md  environment.yml
cmake/cmake_init/: AUTHORS  HealthCheck.cmake  LICENSE  README.md
demos/: .gitignore  demo_cling.cpp  demo_compiler_decipher.cpp  demo_simple.cpp  im_not_a_touch_typist.py
demos/asciinema_casts/: demo_cling.cast  demo_compiler_error.cast
demos/include/: cleantype  fplus  meta  range
docs/: doc.md
include_all_in_one/: make_all_in_one.py
include_all_in_one/include/cleantype/: cleantype.hpp
notebooks/cleantype/: .gitignore  BinderBuildTools.ipynb  build_ct_tools.cpp  cleantype-range-v3.ipynb  cleantype.ipynb  code.cpp  demos  include_all_in_one
notebooks/cleantype/examples/: cleantype_examples_utils.h  quick_demo.ipynb  test_compile.py  types_variations.hpp  typesetting_pointless_holy_war.ipynb  zoo_type_qualifiers.ipynb
notebooks/cleantype/include/: boost  fplus  meta  nlohmann  range  type_name
notebooks/typename/: .gitignore  BinderBuildTools.ipynb  build_ct_tools.cpp  typename.ipynb
notebooks/typename/include/: cleantype
scripts/docker_build/ubuntu18/: Dockerfile  docker_attach.sh  docker_create_image.sh  docker_start.sh
scripts/docker_build/ubuntu18/install_scripts/: customize_env.sh  install_clang.kc.sh  install_clang.sh
scripts/docker_cling/: Dockerfile  docker_create_image.sh  docker_login.sh  docker_run_notebook.sh
scripts/docker_cling/install_scripts/: conda_opencv.sh  conda_xeus_cling.sh  create_notebook_launcher.sh  install_base.sh  install_miniconda.sh
src/include/: list.txt
src/include/cleantype/: cleantype.hpp  cleantype_compile_time.hpp  cleantype_compiler_typeinfo.hpp  cleantype_compiler_typename.hpp  cleantype_configuration.hpp
src/include/cleantype/compile_time/: CMakeLists.txt  cleantype_compiler_parser.cpp  cleantype_decipherer.cpp
src/include/cleantype/compile_time/example/: cleantype_compile_time_example.cpp  example_ouput.txt
src/include/cleantype/details/: cleantype_clean.hpp  cleantype_clean_impl.hpp  cleantype_configuration_json.hpp  cleantype_eastconst.hpp  cleantype_format.hpp  cleantype_format_whitespace.hpp  cleantype_full.hpp  cleantype_function.hpp  cleantype_holder.hpp  cleantype_invoke_result.hpp  cleantype_lambda.hpp  cleantype_lambda_generic.hpp  cleantype_lambda_parse.hpp  (+5 more)
src/include/cleantype/tests/: CMakeLists.txt  cleantype_clean_test.cpp  cleantype_config.test.cpp  cleantype_eastconst_test.cpp  cleantype_full_test.cpp  cleantype_function_test.cpp  cleantype_invoke_result_test.cpp  cleantype_lambda_parse_test.cpp  cleantype_rangev3_test.cpp  cleantype_test.cpp  cleantype_test_indent.cpp  lambda_generic_test.cpp  lambda_test.cpp  lambda_typename_test.cpp  test_main.cpp  test_pack_sizeof.cpp
src/include/constype/: constype.hpp  constype_configuration.hpp
src/include/constype/tests/: CMakeLists.txt  constype_clean_test.cpp  constype_full_s_test.cpp  constype_full_test.cpp  constype_function_test.cpp  constype_test.cpp  lambda_generic_test.cpp  lambda_typename_test.cpp  test_main.cpp
src/include/type_name/: CMakeLists.txt  constype.hpp  sample_lib.cpp  sample_lib.h  type_name.hpp  type_name_clean.hpp  type_name_configuration.hpp  type_name_full.hpp
src/include/type_name/details/: constype_clean.hpp  constype_full.hpp  constype_full_s.hpp  constype_lambda.hpp  constype_tree.hpp  fp_additions.hpp  fp_polyfill.hpp  hana_type_name_ext.hpp  lambda_typename.hpp  type_name_clean.hpp  type_name_format_whitespace.hpp  type_name_full.hpp  type_name_full_s.hpp  type_name_function.hpp  type_name_lambda.hpp  type_name_lambda_generic.hpp  type_name_tree.hpp
src/include/type_name/details/fp_polyfill/: fp_additions.hpp  fp_incompat.hpp  fp_polyfill.hpp
src/include/type_name/details/hana_ext/: Readme.md
src/include/type_name/details/hana_ext/experimental/: type_name.hpp  type_name_unused.hpp
src/include/type_name/details/hana_ext/experimental/detail/: type_name_compiler_capabilities.hpp  type_name_cstring.hpp  type_name_pretty_function.hpp  type_name_stringliteral.hpp
src/include/type_name/details/hana_ext/experimental/detail/test/: type_name_cstring_test.cpp  type_name_stringliteral_test.cpp
src/include/type_name/details/hana_utils/: hana_string_utils.hpp
src/include/type_name/details/hana_utils/experimental/: type_name.hpp
src/include/type_name/details/hana_utils/experimental/detail/: type_name.hpp  type_name_cstring.hpp  type_name_format.hpp  type_name_pretty_function.hpp
src/include/type_name/tests/: CMakeLists.txt  constype_clean_test.cpp  constype_function_test.cpp  hana_string_utils_test.cpp  lambda_generic_test.cpp  lambda_typename_test.cpp  sample_lib_test.cpp  test_hana.cpp  type_name_clean_test.cpp  type_name_detail_cstring_test.cpp  type_name_full_s_test.cpp  type_name_full_test.cpp  type_name_function_test.cpp  type_name_test.cpp
src/libs/sample_lib/: CMakeLists.txt  sample_lib.cpp  sample_lib.h  sample_lib_test.cpp
src/main/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  cleantype_clean_test.cpp  cleantype_compiler_typename_test.cpp  cleantype_config.test.cpp  cleantype_eastconst_test.cpp  cleantype_full_test.cpp  cleantype_invoke_result_test.cpp  cleantype_lambda_parse_test.cpp  cleantype_test_indent.cpp  debug_utilities.hpp  lambda_generic_test.cpp  lambda_test.cpp  test_main.cpp  test_pack_sizeof.cpp
src/tools/ct_compiler_decipher/: CMakeLists.txt  ct_compiler_decipher.cpp
src/tools/ct_compiler_decipher/example/: ct_compiler_decipher_example.cpp
src/tools/ct_compiler_typeinfo/: CMakeLists.txt  ct_compiler_typeinfo.cpp
src/tools/ct_compiler_typeinfo/example/: ct_compiler_typeinfo_example.cpp
src/tools/ct_compiler_typename/: CMakeLists.txt  ct_compiler_typename.cpp  ct_compiler_typename_unit_test.py  ct_compiler_typename_unit_test.sh
src/tools/ct_compiler_typename/example/: ct_compiler_typename_example.cpp  example_ouput.txt
(+35 files in other folders)
